# Luna-Services

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COOKIE_POLICY.md  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md  VERSION  dev.sh  docker-compose.mcp.yml  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  run_mcp.py  run_mcp_dev.py  stop.sh
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  requirements-fixed.txt  requirements-minimal.txt  requirements-ml-optional.txt  requirements-resolved.txt  requirements-updated.txt  requirements.txt
backend/app/: database.py  main.py  supabase_client.py
backend/app/auth/: router.py
backend/app/automation/: router.py
backend/app/mcp/: models.py  router.py  service.py  service_enhanced.py
backend/app/mcp/integrations/: __init__.py  gemini_enhanced.py  langchain_enhanced.py  (+1 more)
backend/app/models/: automation.py  project.py  user.py
backend/scripts/: install-deps-enhanced.sh  install-deps.sh  install-resolved.sh
docs/: AUTOMCP_INTEGRATION.md  AUTOMCP_INTEGRATION_SUMMARY.md  AUTOMCP_README.md  IDE_INTEGRATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION.md  MCP_API_REFERENCE.md  MCP_IMPLEMENTATION_GUIDE.md  MCP_IMPLEMENTATION_PLAN.md  README_MCP.md  UNIVERSAL_IDE_SETUP.md  mkdocs.yml
docs/docs/: architecture.md  index.md
ide-configs/: claude-desktop.md  vscode-cursor.md  zed-editor.md
nginx/: nginx.conf
scripts/: deploy-mcp.sh  quick-setup.sh  setup-automcp.sh  setup-supabase-complete.sh  setup-supabase.sh  start.sh  test-supabase.py  verify-supabase-setup.sh
src/: App.tsx  ShadowApp.tsx  index.css  main.tsx
src/components/Automation/: AutomationCard.tsx  CreateAutomationModal.tsx
src/components/Dashboard/: JobStatus.tsx  ProjectOverview.tsx  RecentActivity.tsx  StatsCard.tsx  SystemHealth.tsx
src/components/Documentation/: DocumentationEditor.tsx  DocumentationList.tsx
src/components/Layout/: Header.tsx  Header_old.tsx  Header_v3.tsx  ModernHeader.tsx  ModernSidebar.tsx  PublicFooter.tsx  PublicHeader.tsx  PublicLayout.tsx  ShadowHeader.tsx  ShadowSidebar.tsx  Sidebar.tsx  Sidebar_old.tsx  index.tsx
src/components/MCP/: EnhancedMCPDashboard.tsx  MCPCodeGenerator.tsx  MCPDashboard.tsx
src/components/UI/: AnimatedBackground.tsx  AnimatedBackgroundNew.tsx  AnimatedComponents.tsx  FeatureCard.tsx  GlassButton.tsx  GlassButtonNew.tsx  LunarEclipseBackground.tsx  WaitlistSection.tsx
src/contexts/: AuthContext.tsx  ClerkAuthContext.tsx
src/pages/About/: AboutPage.tsx
src/pages/Auth/: ModernAuthPage.tsx  index.tsx
src/pages/Automation/: index.tsx
src/pages/Contact/: ContactPage.tsx
src/pages/Contributing/: ContributingPage.tsx
src/pages/Dashboard/: index.tsx
src/pages/Documentation/: DocumentationPage.tsx  index.tsx
src/pages/Integrations/: IntegrationsPage.tsx  index.tsx
src/pages/Landing/: index.tsx
src/pages/Legal/: CookiePolicy.tsx  PrivacyPolicy.tsx  TermsOfService.tsx
src/pages/Login/: index.tsx
src/pages/MCP/: index.tsx
src/pages/Settings/: index.tsx
src/pages/ShadowDashboard/: index.tsx
src/pages/ShadowUIAuth/: index.tsx
src/pages/SignIn/: index.tsx
src/pages/SignUp/: index.tsx
src/pages/Status/: StatusPage.tsx
src/pages/Store/: StorePage.tsx
src/pages/TeamManagement/: index.tsx
src/pages/Testing/: index.tsx
src/services/: api.ts  supabase.ts  waitlistService.ts
src/styles/: lunar-cursor.css  lunar-theme.css
src/theme/: index.ts  shadowTheme.ts  shadowUI.ts
src/types/: auth.ts  index.ts
src/utils/: colorMode.ts
supabase/: config.toml
supabase/migrations/: 20250129_000001_initial_schema.sql  20250129_000002_rls_policies.sql  20250129_000003_functions_triggers.sql
tests/: test_automcp_integration.py
wiki/: README.md  supabase-setup.md
